=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.015

=over

=item *

Upgraded XML-Writer, HTML-Parser, and Tar-Archive to get rid of warnings.
[Perrin]

=item *

Upgraded mod_perl and apache to latest releases. [Perrin]

=item *

Fixed the behavior of Krang::Publisher->preview_story().  Following
the original spec, it now writes the story out to all categories in
the preview path.  Fixed Krang::Story->preview_path as well. [Peter]

=item *

Upgraded Test::Harness to 2.40 to enable warnings during tests.  Fixed
a number of warnings in the test files. [Perrin] [Sam]

=item *

Fixed bug where schedule tests would fail frequently due to
krang_schedulectl leaving bad PID files around.  Also made the
schedule tests quiet unless an error occurs. [Sam]

=item *

Fixed a bug where using a category_trail_loop in a category element
template produced an ISE. [Sam]

=item *

Added support for Fedora Core 1. [Perrin Harkins]

=item *

Moved Krang user/group creation from krang_install to Krang::Platform.
This can now be overridden on a platform-by-platform basis. [Peter]

=item *

Created Krang::Platform->find_bin().  Use of this sub now needs to be
propegated throughout krang_install along with Krang::Platform and its
derivatives - it searches $PATH for the full path for the executable
you're trying to run. [Peter]



=item *

Moved the final installation message out of bin/krang_install, created
Krang::Platform->post_install_message() that generates the same output.
This can now be overridden & extended on a platform-specific basis. [Peter]

=item *

Split the various checks out of Krang::Platform->verify_dependencies().
This will simplify ports to other platforms, as individual checks can
now be overridden, rather than the entire sub. [Peter]

=item *

Added new default scheduled job to analyze DB tables nightly.  This
greatly improves performance for large databases. [Sam]

=item *
